--- a/static/api.html
+++ b/static/api.html
@@ -14,7 +14,7 @@
     <nav class="clearfix">
       <ul class="clearfix">
         <li><a href="/index.html">Home</a></li>
-        <li><a href="/static//about.html">About</a></li>
+        <li><a href="/static/about.html">About</a></li>
         <li><a href="/static/stats.html">Stats</a></li>
         <li><a href="/static/api.html">API</a></li>
       </ul>
